# COE768

./: README.md
L3/: CMakeLists.txt  client.c  server.c
L3/most_of_c_server/: client.c  server.c
L4_1/: CMakeLists.txt  client.c  common.h  headers.h  networking.h  server.c
L4_1/dir/: small.txt
L4_2/: CMakeLists.txt  client.c  server.c  test.c
L5/: CMakeLists.txt  cli.c  client.c  common.h  main.c  server.c
L5/playing_around/: client.c  client_1.c  server.c  server_1.c  test.c
Peer2Peer/App/: CMakeLists.txt  Client.h  Content.h  Files.h  Index_Server.h  Network.h  PDUs.h  common.h  download_client.c  main.c  notes.txt  test.c
Peer2Peer/App/helpers/: Content.h  Files.h  Network.h  PDUs.h
Peer2Peer/App/processes/: download_client.h  download_server.h  index_server.h
Peer2Peer/App/tests/: content_test.c  file_test.c  fork_test.c  pdu_test.c  tcp_test.c  udp_test.c
Peer2Peer/AppV1/: Index_Server.h  common.h  main_tmp.c  notes.txt
Peer2Peer/AppV2/: content_server.c  file_manipulation.h  index_server.c  main.c  network.h  test.c
Peer2Peer/Tests/: CMakeLists.txt  test.c
